add simple routing

--- a/src/main/resources/app/styles/App.css
+++ b/src/main/resources/app/styles/App.css
@@ -5,9 +5,13 @@ html,
 body {
     height: 100%;
     position: relative;
+    margin: 0;
 }
 ol {
     list-style-type: decimal;
     margin: 0;
     padding-left: 25px;
+}
+.root {
+    position: absolute;
 }
